2005-02-17  Thomas Zander <zander@kde.org>
	* gnu/testlet/javax/swing/text/html/parser/ParserDelegator/parsingTester.java:
	rename variable named 'enum' to avoid conflicting with java 1.5 reserved keyword
	with the same name
	* gnu/testlet/java/io/ObjectInputStream/ClassLoaderTest.java:
	Fix the way the inner class was located and fix the class to actually compile on javac

2005-02-16  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/io/ObjectOutputStream/StreamDataTest.java: New test.
	* gnu/testlet/java/io/ObjectInputStream/ClassLoaderTest.java: New test.

2005-02-16  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/nio/charset/Charset/UTF8Charset.java: New test.

2005-02-16  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/lang/Class/serialization.java: Remove stray space
	from 'Tags'.

2005-02-15  Audrius Meskauskas <audriusa@bluewin.ch>    
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/parsingTester.java:
	New test on long tandem of subsequent html tags.

2005-02-14  Audrius Meskauskas <audriusa@bluewin.ch>    
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/Text.java: New test.
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/eolnNorification.java:
	New test.
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/randomTables.java:
    New test.
	* gnu/testlet/javax/swing/text/html/parser/ParserDelegator/tokenLocations.java:
	New test case on position of SGML insertion.
	* gnu/testlet/javax/swing/text/html/parser/ParserDelegator/parsingTester.java:
	New test cases with valueless unknown argument and nested tables.
	
2005-02-13  Thomas Zander <zander@kde.org>
    * gnu/testlet/javax/swing/KeyStroke/getKeyStroke.java: new test

2005-02-13  Audrius Meskauskas <audriusa@bluewin.ch>    
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/tokenLocations.java
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/parsingTester.java